# LegalTechAI

./: .gitignore  README.md  pyproject.toml
acord/: acord_retrieval_eval.py  finetune_sbert_gpu.py  main.py  retrieve_cli.py
acord/output/finetuned-sbert/: README.md  config_sentence_transformers.json
legal_summarizer/: benchmark_models.py  convert_in_abs_txt_to_csv.py  run_pipeline.py  setup_models.py  summarize.py
legal_summarizer/abstractive/: bart_chunked.py  legal_pegasus.py
legal_summarizer/dataset/: tree-L-4.out  tree-L-5.out
legal_summarizer/evaluation/: evaluate.py
legal_summarizer/extractive/: lexrank.py
legal_summarizer/utils/: preprocess.py
rhetorical-role-baseline/: add_uuid_to_json.py  infer_data_prep.py  infer_new.py
rhetorical-role-baseline/json/: custom_input_1.json  custom_processed_input.json  custom_processed_input_1.json  dev.json  dev_with_uuid.json  output.json  output_1.json  test.json
rhetorical-role-baseline/q-n-a/: .env.sample  app.py  docker-compose.yml
rhetorical-role-baseline/q-n-a/datasets/pubmed-20k/: sentece_boundries.json
src/legaltech/: main.py
src/tpgtahc/: lex_ab_summ.py
