[project]
name = "legaltech"
version = "0.1.0"
description = ""
authors = [
    {name = "Riju",email = "mailmeonriju@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "markitdown (>=0.1.1,<0.2.0)"
]

[tool.poetry]
packages = [{ include = "legaltech", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
